Cycles: r47616 breaks nested group rendering #31780

Closed
opened 2012-06-10 16:31:15 +02:00 by Tom Pov · 6 comments

%%%Don't beat me, but the bug I reported in #31668 is back again in slight variation between r47590 and r47635, perhaps with r47592 !?

Same description of file configuration as discribed in #31668, but now the bug is visible only in render(preview).
And now only the first indirect linked objects are apparent (first of B and first of C).

Greetings
Tom
%%%

%%%Don't beat me, but the bug I reported in #31668 is back again in slight variation between r47590 and r47635, perhaps with r47592 !? Same description of file configuration as discribed in #31668, but now the bug is visible only in render(preview). And now only the first indirect linked objects are apparent (first of B and first of C). Greetings Tom %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

%%%For better explaination:

Cube in file A,
in file B link to the cube of A, duplicate it and group them,
in file C link to the cube of A, duplicate it and group them,
in file D link to groups of B and C and render or simply switch to rendered 3Dview, the duplicated cubes are missing.

Greetings
Tom
%%%

%%%For better explaination: Cube in file A, in file B link to the cube of A, duplicate it and group them, in file C link to the cube of A, duplicate it and group them, in file D link to groups of B and C and render or simply switch to rendered 3Dview, the duplicated cubes are missing. Greetings Tom %%%
Author

%%%Oh, sorry, I missed to mention, this happens only in Cycles.

Win7 64

Tom%%%

%%%Oh, sorry, I missed to mention, this happens only in Cycles. Win7 64 Tom%%%

%%%this isnt todo with linking, its caused by group nesting, assigning to lukas-t since this is caused by r47616.

attached simple testfile with nested groups.%%%

%%%this isnt todo with linking, its caused by group nesting, assigning to lukas-t since this is caused by r47616. attached simple testfile with nested groups.%%%
Member

%%%Your reported issue has been fixed in SVN. Thanks for taking the
time to report!.%%%

%%%Your reported issue has been fixed in SVN. Thanks for taking the time to report!.%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#31780
No description provided.